--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"type": "module",
 	"scripts": {
 		"start": "node .",
-		"dev": "yarn build && conc -n \"frontend,backend\" -c \"bgBlue,bgGreen\" \"yarn build:frontend --watch --clearScreen=false\" \"yarn build:backend --watch --silent --onSuccess 'sleep 2 && node .'\"",
+		"dev": "yarn build && conc -n \"frontend,backend\" -c \"bgBlue,bgGreen\" \"yarn build:frontend --watch --clearScreen=false\" \"yarn dev:backend\"",
+		"dev:backend": "tsup --watch --silent --onSuccess 'sleep 2 && node .'",
 		"build": "conc -c \"bgBlue,bgGreen\" \"yarn:build:*\"",
 		"build:frontend": "vite build",
 		"build:backend": "tsup",
